--- a/Demos/MouseDrag.ipynb
+++ b/Demos/MouseDrag.ipynb
@@ -10,7 +10,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/jquery-ui.custom.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1a.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.2.1.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1b.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -46,7 +46,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glowcomm\");"
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -58,7 +58,19 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/glowcomm\"], function(){console.log(\"glowcomm loaded\");})"
+       "require([\"nbextensions/vpython_libraries/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -96,8 +108,8 @@
     "from vpython import *\n",
     "# John Coady\n",
     "\n",
-    "#scene.title = \"Mouse Drag\"\n",
-    "#scene.caption = \"\"\"Click and drag mouse in 3D window to insert small sphere.\"\"\"\n",
+    "title = \"Click and drag the mouse in the 3D window to insert and drag a small sphere.\"\n",
+    "scene.title = title\n",
     "\n",
     "scene.range = 3\n",
     "\n",
@@ -108,19 +120,17 @@
     "\n",
     "def grab(evt):\n",
     "    global s, drag\n",
-    "    scene.title = 'Drag the sphere'\n",
-    "    if evt.which == 1:\n",
-    "        drag = True\n",
-    "        loc = evt.pos\n",
-    "        s = sphere(pos=loc, radius=0.1, color=color.red)\n",
+    "    scene.title = 'Drag the sphere.'\n",
+    "    drag = True\n",
+    "    s = sphere(pos=evt.pos, radius=0.1, color=color.red)\n",
     "\n",
     "def move(evt):\n",
     "    if drag:\n",
     "        s.pos = evt.pos\n",
-    "\n",
+    "        \n",
     "def drop(evt):\n",
     "    global drag\n",
-    "    scene.title = 'Mouse Drag'\n",
+    "    scene.title = title\n",
     "    s.color = color.cyan\n",
     "    drag = False\n",
     "\n",
