--- a/Demos/Plot3D.ipynb
+++ b/Demos/Plot3D.ipynb
@@ -10,7 +10,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/jquery-ui.custom.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1a.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.2.1.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1b.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -46,7 +46,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glowcomm\");"
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -58,7 +58,19 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/glowcomm\"], function(){console.log(\"glowcomm loaded\");})"
+       "require([\"nbextensions/vpython_libraries/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -102,6 +114,7 @@
     "L = 25\n",
     "scene.range = 1.3*L\n",
     "scene.center = vec(0.05*L,0.2*L,0)\n",
+    "scene.forward = vec(-0.7,-0.5,-1)\n",
     "## The next line contains LaTeX math notation. See http://www.glowscript.org/docs/VPythonDocs/MathJax.html\n",
     "#scene.caption = \"\"\"\\\\( f(x,y,t) = 0.7+0.2\\\\sin{(10x)}\\\\cos{(10y)}\\\\cos{(2t)} \\\\)\n",
     "scene.caption = \"\"\"<i>f</i>(<i>x,y,t</i>) = 0.7+0.2sin{(10<i>x</i>)cos{(10<i>y</i>)cos{(2<i>t</i>)\n",
@@ -215,7 +228,6 @@
     "    run = not run\n",
     "\n",
     "scene.bind('mousedown', running)\n",
-    "scene.forward = vec(-0.7,-0.5,-1)\n",
     "\n",
     "while True:\n",
     "    rate(30)\n",
