--- a/Demos/AtomicSolid.ipynb
+++ b/Demos/AtomicSolid.ipynb
@@ -10,7 +10,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/jquery-ui.custom.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/jquery-ui.custom.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -22,7 +22,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1a.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glow.2.1.min\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -34,7 +34,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glow.2.1b.min\");"
+       "require.undef(\"nbextensions/vpython_libraries/glowcomm\");"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -46,7 +46,7 @@
     {
      "data": {
       "application/javascript": [
-       "require.undef(\"nbextensions/glowcomm\");"
+       "require([\"nbextensions/vpython_libraries/jquery-ui.custom.min\"], function(){console.log(\"JQUERY LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -58,7 +58,19 @@
     {
      "data": {
       "application/javascript": [
-       "require([\"nbextensions/glowcomm\"], function(){console.log(\"glowcomm loaded\");})"
+       "require([\"nbextensions/vpython_libraries/glow.2.1.min\"], function(){console.log(\"GLOW LOADED\");})"
+      ],
+      "text/plain": [
+       "<IPython.core.display.Javascript object>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/javascript": [
+       "require([\"nbextensions/vpython_libraries/glowcomm\"], function(){console.log(\"GLOWCOMM LOADED\");})"
       ],
       "text/plain": [
        "<IPython.core.display.Javascript object>"
@@ -92,31 +104,25 @@
      "output_type": "display_data"
     },
     {
-     "ename": "KeyboardInterrupt",
-     "evalue": "",
+     "ename": "AttributeError",
+     "evalue": "'sphere' object has no attribute 'momentum'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-1-09f74f1ac129>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     80\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     81\u001b[0m \u001b[1;32mwhile\u001b[0m \u001b[1;32mTrue\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 82\u001b[1;33m     \u001b[0mrate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;36m60\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     83\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0matom\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0matoms\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     84\u001b[0m         \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmomentum\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda3\\lib\\site-packages\\vpython\\vpython.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, maxRate)\u001b[0m\n\u001b[0;32m    210\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrval\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[0mmaxRate\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mand\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mmaxRate\u001b[0m \u001b[1;33m>=\u001b[0m \u001b[1;36m1.0\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    211\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrval\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mmaxRate\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 212\u001b[1;33m         \u001b[0msuper\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mRateKeeper2\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0m__call__\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mmaxRate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    213\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    214\u001b[0m \u001b[1;32mif\u001b[0m \u001b[0msys\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mversion\u001b[0m \u001b[1;33m>\u001b[0m \u001b[1;34m'3'\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda3\\lib\\site-packages\\vpython\\rate_control.py\u001b[0m in \u001b[0;36m__call__\u001b[1;34m(self, maxRate)\u001b[0m\n\u001b[0;32m    204\u001b[0m             \u001b[0mdt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlastSleep\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalls\u001b[0m\u001b[1;33m*\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0muserTime\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcallTime\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdelay\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;33m+\u001b[0m\u001b[0;31m \u001b[0m\u001b[0;31m\\\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    205\u001b[0m                  \u001b[0mrenders\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mrenderTime\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0msleeps\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0minteractionPeriod\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0m_clock\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 206\u001b[1;33m             \u001b[0m_sleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    207\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mlastSleep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_clock\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    208\u001b[0m             \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcalls\u001b[0m \u001b[1;33m=\u001b[0m \u001b[1;36m0\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;32mC:\\Anaconda3\\lib\\site-packages\\vpython\\rate_control.py\u001b[0m in \u001b[0;36m_sleep\u001b[1;34m(dt)\u001b[0m\n\u001b[0;32m     47\u001b[0m         \u001b[0mdtsleep\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnticks\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0m_tick\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     48\u001b[0m         \u001b[0mt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_clock\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 49\u001b[1;33m         \u001b[0mtime\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdtsleep\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     50\u001b[0m         \u001b[0mt\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0m_clock\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m-\u001b[0m\u001b[0mt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     51\u001b[0m         \u001b[0mdt\u001b[0m \u001b[1;33m-=\u001b[0m \u001b[0mt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mKeyboardInterrupt\u001b[0m: "
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-ef341aa444da>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[0;32m     88\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0matom\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0matoms\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     89\u001b[0m         \u001b[1;32mif\u001b[0m \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mvisible\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 90\u001b[1;33m             \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0matom\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmomentum\u001b[0m\u001b[1;33m/\u001b[0m\u001b[0mm\u001b[0m\u001b[1;33m*\u001b[0m\u001b[0mdt\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     91\u001b[0m     \u001b[1;32mfor\u001b[0m \u001b[0mspring\u001b[0m \u001b[1;32min\u001b[0m \u001b[0mc\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0msprings\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     92\u001b[0m         \u001b[0mspring\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0maxis\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mspring\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mend\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m \u001b[1;33m-\u001b[0m \u001b[0mspring\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mstart\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpos\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'sphere' object has no attribute 'momentum'"
      ]
     }
    ],
    "source": [
     "from vpython import *\n",
-    "from random import random\n",
-    "\n",
-    "scene.width = 600\n",
-    "scene.height = 600\n",
-    "scene.range = 2.4\n",
     "\n",
     "# Bruce Sherwood\n",
     "\n",
     "N = 3 # N by N by N array of atoms\n",
+    "# Surrounding the N**3 atoms is another layer of invisible fixed-position atoms\n",
+    "# that provide stability to the lattice.\n",
     "k = 1\n",
     "m = 1\n",
     "spacing = 1\n",
@@ -124,10 +130,11 @@
     "L0 = spacing-1.8*atom_radius\n",
     "V0 = pi*(0.5*atom_radius)**2*L0 # initial volume of spring\n",
     "scene.center = 0.5*(N-1)*vector(1,1,1)\n",
+    "scene.range = 2.5\n",
     "dt = 0.04*(2*pi*sqrt(m/k))\n",
     "axes = [vector(1,0,0), vector(0,1,0), vector(0,0,1)]\n",
     "\n",
-    "scene.caption = \"\"\"A model of a solid represented as atoms connected by interatomic bonds.\n",
+    "scene.caption= \"\"\"A model of a solid represented as atoms connected by interatomic bonds.\n",
     "\n",
     "Right button drag or Ctrl-drag to rotate \"camera\" to view scene.\n",
     "To zoom, drag with middle button or Alt/Option depressed, or use scroll wheel.\n",
@@ -135,72 +142,82 @@
     "Touch screen: pinch/extend to zoom, swipe or two-finger rotate.\"\"\"\n",
     "\n",
     "class crystal:\n",
-    "\n",
-    "    def atomAt(self, np):\n",
-    "        if (np.x>=0 and np.y>=0 and np.z>=0 and np.x<N and np.y<N and np.z<N):\n",
-    "            return self.atoms[int(np.x + np.y*N + np.z*N*N)]\n",
-    "        # Otherwise create an invisible wall and return it\n",
-    "        w = box()\n",
-    "        w.visible = False  # comment out to see the true model\n",
-    "        w.radius = atom_radius\n",
-    "        w.pos = np*spacing\n",
-    "        w.momentum = vector(0,0,0)\n",
-    "        return w\n",
     "        \n",
     "    def __init__(self,  N, atom_radius, spacing, momentumRange ):\n",
     "        self.atoms = []\n",
     "        self.springs = []\n",
-    "\n",
-    "        # Create N^3 atoms in a grid\n",
-    "        for z in range(N):\n",
-    "            for y in range(N):\n",
-    "                for x in range(N):\n",
-    "                    atom = sphere()\n",
-    "                    atom.pos = vector(x,y,z)*spacing\n",
-    "                    atom.radius = atom_radius\n",
-    "                    atom.color = vector(0,0.58,0.69)\n",
-    "                    # vec.random() available in GlowScript but not in classic VPython\n",
-    "                    px = 2*random()-1 # ranges from -1 to +1\n",
-    "                    py = 2*random()-1\n",
-    "                    pz = 2*random()-1\n",
-    "                    atom.momentum = momentumRange*vector(px,py,pz)\n",
+    "        \n",
+    "        # Create (N+2)^3 atoms in a grid; the outermost atoms are fixed and invisible\n",
+    "        for z in range(-1,N+1,1):\n",
+    "            for y in range(-1,N+1,1):\n",
+    "                for x in range(-1,N+1,1):\n",
+    "                    visible = True\n",
+    "                    if 0 <= x < N and 0 <= y < N and 0 <= z < N:\n",
+    "                        p = momentumRange*vector.random()\n",
+    "                    else:\n",
+    "                        p = vec(0,0,0)\n",
+    "                        visible = False\n",
+    "                    atom = sphere(pos=vector(x,y,z)*spacing,\n",
+    "                                  radius=atom_radius, visible=visible,\n",
+    "                                  color=vector(0,0.58,0.69), momentum=p)\n",
+    "                    atom.index = len(self.atoms)\n",
     "                    self.atoms.append( atom )\n",
-    "       \n",
-    "        # Create a grid of springs linking each atom to the adjacent atoms\n",
-    "        # in each dimension, or to invisible walls where no atom is adjacent\n",
-    "        for d in range(3):\n",
-    "            for z in range(-1,N):\n",
-    "                for y in range(-1,N):\n",
-    "                    for x in range(-1,N):\n",
-    "                        atom = self.atomAt(vector(x,y,z))\n",
-    "                        neighbor = self.atomAt(vector(x,y,z)+axes[d])\n",
-    "                        if (atom.visible or neighbor.visible):\n",
-    "                            spring = helix()\n",
-    "                            spring.visible = atom.visible and neighbor.visible\n",
-    "                            spring.thickness = 0.05\n",
-    "                            spring.radius = 0.5*atom_radius\n",
-    "                            spring.length = spacing\n",
-    "                            spring.up = vector(1,1,1) # prevent fibrillation of vertical springs\n",
-    "                            spring.atoms = [ atom, neighbor ]\n",
-    "                            spring.color = vector(1,0.5,0)\n",
-    "                            self.springs.append(spring)\n",
+    "        for atom in self.atoms:\n",
+    "            if atom.visible:\n",
+    "                if atom.pos.x == 0:\n",
+    "                    self.make_spring(self.atoms[atom.index-1], atom, False)\n",
+    "                    self.make_spring(atom, self.atoms[atom.index+1], True)\n",
+    "                elif atom.pos.x == N-1:\n",
+    "                    self.make_spring(atom, self.atoms[atom.index+1], False)\n",
+    "                else:\n",
+    "                    self.make_spring(atom, self.atoms[atom.index+1], True)\n",
+    "\n",
+    "                if atom.pos.y == 0:\n",
+    "                    self.make_spring(self.atoms[atom.index-(N+2)], atom, False)\n",
+    "                    self.make_spring(atom, self.atoms[atom.index+(N+2)], True)\n",
+    "                elif atom.pos.y == N-1:\n",
+    "                    self.make_spring(atom, self.atoms[atom.index+(N+2)], False)\n",
+    "                else:\n",
+    "                    self.make_spring(atom, self.atoms[atom.index+(N+2)], True)\n",
+    "                    \n",
+    "                if atom.pos.z == 0:\n",
+    "                    self.make_spring(self.atoms[atom.index-(N+2)**2], atom, False)\n",
+    "                    self.make_spring(atom, self.atoms[atom.index+(N+2)**2], True)\n",
+    "                elif atom.pos.z == N-1:\n",
+    "                    self.make_spring(atom, self.atoms[atom.index+(N+2)**2], False)\n",
+    "                else:\n",
+    "                    self.make_spring(atom, self.atoms[atom.index+(N+2)**2], True)\n",
+    "    \n",
+    "    # Create a grid of springs linking each atom to the adjacent atoms\n",
+    "    # in each dimension, or to invisible motionless atoms\n",
+    "    def make_spring(self, start, end, visible):\n",
+    "        spring = helix(pos=start.pos, axis=end.pos-start.pos, visible=visible,\n",
+    "                    thickness=0.05, radius=0.5*atom_radius, length=spacing,\n",
+    "                    up=vector(1,1,1), # prevent fibrillation of vertical springs\n",
+    "                    color=color.orange)\n",
+    "        spring.start = start\n",
+    "        spring.end = end\n",
+    "        self.springs.append(spring)\n",
     "\n",
     "c = crystal(N, atom_radius, spacing, 0.1*spacing*sqrt(k/m))\n",
     "\n",
     "while True:\n",
     "    rate(60)\n",
     "    for atom in c.atoms:\n",
-    "        atom.pos = atom.pos + atom.momentum/m*dt\n",
+    "        if atom.visible:\n",
+    "            atom.pos = atom.pos + atom.momentum/m*dt\n",
     "    for spring in c.springs:\n",
-    "        spring.axis = spring.atoms[1].pos - spring.atoms[0].pos\n",
+    "        spring.axis = spring.end.pos - spring.start.pos\n",
     "        L = mag(spring.axis)\n",
     "        spring.axis = spring.axis.norm()\n",
-    "        spring.pos = spring.atoms[0].pos+0.5*atom_radius*spring.axis\n",
-    "        Ls = L-1*atom_radius\n",
+    "        spring.pos = spring.start.pos+0.5*atom_radius*spring.axis\n",
+    "        Ls = L-atom_radius\n",
     "        spring.length = Ls\n",
     "        Fdt = spring.axis * (k*dt * (1-spacing/L))\n",
-    "        spring.atoms[0].momentum = spring.atoms[0].momentum + Fdt\n",
-    "        spring.atoms[1].momentum = spring.atoms[1].momentum - Fdt"
+    "        if spring.start.visible:\n",
+    "            spring.start.momentum = spring.start.momentum + Fdt\n",
+    "        if spring.end.visible:\n",
+    "            spring.end.momentum = spring.end.momentum - Fdt\n"
    ]
   },
   {
