Update index into the demo programs (used by Binder)

--- a/index.ipynb
+++ b/index.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "source": [
     "### Jupyter VPython: navigable real-time 3D animations, done simply\n",
@@ -24,9 +24,13 @@
     "\n",
     "[Local moving lights](Demos/BoxLightTest.ipynb): local lights moving around the scene\n",
     "\n",
-    "[Buttons, sliders, and menus](Demos/ButtonsSlidersMenus.ipynb): widgets controlling a scene\n",
+    "[Buttons, sliders, and menus](Demos/ButtonsSlidersMenus1.ipynb): rotating box, Jupyter widgets\n",
     "\n",
-    "[RGB-HSV colors](Demos/Color-RGB-HSV.ipynb): RGB <-> HSV color conversions\n",
+    "[Buttons, sliders, and menus](Demos/ButtonsSlidersMenus2.ipynb): rotating box, GlowScript widgets\n",
+    "\n",
+    "[RGB-HSV colors](Demos/Color-RGB-HSV1.ipynb): RGB <-> HSV color conversions, Jupyter widgets\n",
+    "\n",
+    "[RGB-HSV colors](Demos/Color-RGB-HSV2.ipynb): RGB <-> HSV color conversions, GlowScript widgets\n",
     "\n",
     "[Dipole electric field](Demos/DipoleElectricField.ipynb): the electric field of a dipole (+ and - charges)\n",
     "\n",
@@ -56,7 +60,9 @@
     "\n",
     "[Surreal Stonehenge](Demos/Stonehenge.ipynb): fly through a surreal scene\n",
     "\n",
-    "[Textures](Demos/Textures.ipynb): textures currently supported by Jupyter VPython\n",
+    "[Textures](Demos/Textures1.ipynb): textures included with Jupyter VPython, Jupyter widgets\n",
+    "\n",
+    "[Textures](Demos/Textures2.ipynb): textures included with Jupyter VPython, GlowScript widgets\n",
     "\n",
     "[Transparency](Demos/Transparency.ipynb): true pixel-level transparency; see [technical details](http://www.glowscript.org/docs/GlowScriptDocs/technical.html)\n",
     "\n",
@@ -83,8 +89,9 @@
   }
  ],
  "metadata": {
+  "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [default]",
    "language": "python",
    "name": "python3"
   },
